# UTP2

./: .ghci  .gitignore  .latexcfg  LICENSE  Makefile  README  README.md  Setup.hs  TODOs.org  Test.hs  Theory-MAIN.tex  UNIFY.tex  UTP2-Appendices.tex  UTP2-Hacking-MAIN.tex  UTP2-MAIN.tex  UTP2-Prover.tex  UTP2-Reference-MAIN.tex  UTP2-Requirements.tex  UTP2-TEST.tex  UTP2-User-Manual-MAIN.tex  UTP2-wxUI.tex  UTP2.cabal  electron.js  package-electron.sh  package.json  run-electron.sh  stack.yaml  threepenny-vision.org  work
app/: Main.lhs
app-abstract/: Main.lhs
app-threepenny/: Main.lhs
design/: Cycles.txt  ModuleDeps.hs  README.md  build-import-deps.sh  clean-all.sh  clean.sh  wipe.sh
doc/: BA_Handbook_Logic.tex  Background-Blamey86.tex  Background-CMR99.tex  Background-Farmer90.tex  Background-Feferman95.tex  Background-Intro.tex  Background-JM94.tex  Background-MB98.tex  Background-MB99.tex  Background-Owe93.tex  Background-Prawitz56.tex  Background-Uniform.tex  Background-WB91.tex  Background.tex  DOC-STUFF.tex  Datatypes-Provenance.tex  DisplayFreeVarDefs.tex  DisplayLogicDefs.tex  Expr-Substitution-Matching.tex  Extended-Lambda-Calculus.tex  Foundations.tex  FreeBound-ObsVar-Theory.tex  Gotchas.tex  HackIntro.tex  INSTALL.txt  Issues.tex  LaTeXFormat.tex  Language-Specification.tex  ListKinds.tex  MANIFEST.txt  Manipulation-Alpha-Equiv-1.tex  Manipulation-Alpha-Equiv-2.tex  Manipulation-Force-Matches.tex  Manipulation-RuleOut-QVar.tex  Manipulation-RuleOut-Subst.tex  Manipulation-Subst-Apply.tex  Manipulation-Substitution-Match.tex  Manipulation-Translate-SideCond.tex  Matching-Known.tex  Matching-List-Denote.tex  (+46 more)
doc/formal/: Matching-Decoration.tex  Matching-Infix.tex  Matching-List.tex  Matching-Structural.tex  Matching-Type-Rules.tex  MatchingRules.tex  UTP2MatchingRules.tex
doc/fyp/: frp.org
doc/images/: Identifier-Lexical-Diagram.eps  Identifier-Lexical-Diagram.graffle
doc/papers/ARCADE2017/: ARCADE2017.bib  ARCADE2017.tex
doc/papers/UITP2014/: 2010-Intro.tex  2010-MotivateRelate.tex  CFP.txt  Discussion.tex  Interaction.tex  Introduction.tex  Motivation.tex  ProofWalkthrough.tex  UITP'14 notification for paper 3.txt  UITP2014-MAIN.bib  UITP2014-MAIN.tex  UTP2010-stuff.tex  UTP2012-stuff.tex  UTP2014-stuff.tex  abstract.tex  eptcs-doc.tex  saoithin.sty
doc/papers/UITP2014/EPTCS/: UITP2014-EPTCS-MAIN.bib  UITP2014-EPTCS-MAIN.tex
doc/papers/UITP2014/THEORIES/: Arithmetic.teoric  Designs.teoric  Equality.teoric  Lists.teoric  Logic.teoric  Sets.teoric  intsct-comm.txt
doc/papers/UTP2010/: UTP-2010-final-MAIN.bib  UTP-2010-final-MAIN.tex  UTP2010-Conclusions.tex  UTP2010-Intro.tex  UTP2010-Language.tex  UTP2010-Logic-UTTXT.tex  UTP2010-Logic.tex  UTP2010-Matching.tex  UTP2010-Proof.tex  UTP2010-Types-UTTXT.tex  UTP2010-Types.tex  UTP2010-Usage.tex  abstract.tex  proof.sty  saoithin-pp.sty  saoithin.sty
doc/papers/UTP2012/: Conclusions.tex  Designs.tex  Intro.tex  Logic.tex  LogicOfUTP2-MAIN.tex  Rules.tex  SAOITHIN.bib  Soundness.tex  Theories.tex  UTP.tex  UTP2LogicDefs.tex  abstract.tex  reviews.txt  saoithin.sty
doc/papers/UTP2014/: Conclusions.tex  Exploitation.tex  Intro.tex  Logic.tex  Manipulation-Alpha-Equiv.tex  Manipulation-Check-SideCond.tex  Manipulation-Force-Matches.tex  Manipulation-Identify-Feasible-QVars.tex  Manipulation-Identify-Feasible-Substn.tex  Manipulation-Prune-Single.tex  Manipulation-Record-Forced.tex  Manipulation-RuleOut-Expr.tex  Manipulation-SideCond-Resolve.tex  Manipulation-Substitution-Matches.tex  Manipulation-Translate-SideCond.tex  Matching.tex  MatchingRules.tex  NonDetMatch.tex  Programs.tex  Related.tex  SAOITHIN.bib  StructMatch.tex  Theories.tex  UTP2-Matching-MAIN.tex  UTP2LogicDefs.tex  UTP2MatchingRules.tex  Variables.tex  abstract.tex  saoithin.sty
doc/screenshots/: OSXRename.lhs
doc/threepenny/: .frp.org.swp  frp.org
licence/: COPYING.txt  PARSEC-LICENCE.txt  WXWINDOWS-LICENCE.txt
proto/: PrettyZipper.hs  ProtoFocus.hs  ProtoFocus.lhs  ProtoFocus2.lhs  ProtoMatch.lhs  ProtoMatchTypes-only.lhs  ProtoResolve.hs  ProtoTypes.hs  ProtoZipper2.hs  Tables.lhs  UnicodeFun.hs  Utilities.lhs  eMatch-calls.eps  eMatch-calls.graffle  frozen.txt  proto.bat  raw.txt
resource/: UTP2-icons.icns  index.html
src/: .ghci  About.lhs  AdHocTests.lhs  AlphaSubs.lhs  Archive.lhs  Builtin.lhs  Compatibility.hs  DSL.lhs  DataText.lhs  Datatypes.lhs  DependencySnapshot.txt  Design.lhs  DocTextParser.lhs  EParseLib.lhs  Expr-Substitution-Greedy-Matching.tex  Files.lhs  Flatten.lhs  Focus.lhs  FreeBound.lhs  FromZ.lhs  GIFiles.hs  GS3001.lhs  GSLogic.lhs  Heuristics.lhs  ImportExport.lhs  Instantiate.lhs  Invariants.lhs  LaTeXAST.lhs  LaTeXErrors.lhs  LaTeXLexer.lhs  LaTeXNames.lhs  LaTeXParse.lhs  LaTeXParserIF.lhs  LaTeXPretty.lhs  LaTeXSetup.lhs  LaTeXTest.lhs  Laws.lhs  ListTypes.hs  Logic.lhs  Manipulation.lhs  (+61 more)
src/Graphics/UI/: Abstract.hs
src/Graphics/UI/Abstract/: Threepenny.hs
src/UTP2/: Abstract.hs  GUI.hs  Threepenny.lhs
src/UTP2/GUI/: Abstract.hs  Threepenny.hs  Threepenny.lhs
src/UTP2/GUI/Threepenny/: Attributes.hs  Dom.hs  Events.hs  FileSystem.hs  Home.hs  Materialize.hs  Monad.hs  Style.hs  Text.hs  TheoryGraph.hs  Types.hs  Util.hs  Warn.hs  Workspace.hs  notes.org
src/UTP2/GUI/Threepenny/Engine/: Files.hs
test/: GSLogicFull.teoric  MATCH-TEST.teoric  MATCH-TEST_kn-fail.cruthu  MATCH-TEST_kn-suceed.cruthu  _ACALAI.creat
theory/: Kleisli-Relations.tex
thlib/: AlgOp.teoric  Designs.teoric  Equality.teoric  LabelSets.teoric  Logic.teoric  LogicLaws.teoric  LogicLaws_ATEST.cruthu  LogicLaws_atest2.cruthu  LogicLaws_btest.cruthu  LogicLaws_exists-vacSQSQ.cruthu  LogicLaws_forall-FALSE.cruthu  LogicLaws_forall-vac.cruthu  NonPropLogic-26.utp  NonPropLogic.teoric  NonPropLogic_EQV-rForall-Distr.cruthu  PropLogic.teoric  Sets.teoric  TEST.teoric  UTP-Base_RFD-refl.cruthu  UTP-Base_[[]]-FALSE.cruthu  UTP.teoric  Unicode.teoric  _ACALAI.creat  _ROOT.teoric
thlib/History/: UTP-Base$12.teoric  UTP-Base$13.teoric
