Name:                UTP2
Version:             0.9.8.8
Synopsis:            Unifying Theories of Programming Theorem-Prover
Description:
    This application supports the development of UTP theories
    using equational reasoning
    
Homepage:            https://www.scss.tcd.ie/Andrew.Butterfield/Saoithin
License:             GPL2
License-file:        LICENSE
Author:              Andrew Butterfield
Maintainer:          Andrew Butterfield <Andrew.Butterfield@scss.tcd.ie>
Category:            GUI
Cabal-version:       >= 1.8

Build-type:          Custom
Extra-source-files:  Makefile

data-dir:            resource
data-files:          UTP2-alert.wav
                     UTP2-cheer.wav
                     UTP2-note.wav
                     UTP2-scream.wav

Library
    hs-source-dirs:  src
    exposed-modules: UTP2
    other-modules:   About
                   , AlphaSubs
                   , Archive
                   , Builtin
                   , DSL
                   , DataText
                   , Datatypes
                   , DocTextParser
                   , Files
                   , Flatten
                   , Focus
                   , FreeBound
                   , GS3001
                   , GSLogic
                   , Heuristics
                   , ImportExport
                   , Instantiate
                   , Invariants
                   , LaTeXNames
                   , LaTeXPretty
                   , LaTeXSetup
                   , LaTeXTest
                   , Laws
                   , Logic
                   , Manipulation
                   , MatchTypes
                   , Matching
                   , MatchingType
                   , Normalise
                   , Precedences
                   , Program
                   , Proof
                   , ProofReplay
                   , R
                   , RAlg
                   , RootTheory
                   , SideConditions
                   , Substitution
                   , Synchronise
                   , Tables
                   , Theories
                   , Types
                   , UTP
                   , Utilities
                   , WxFiles
                   , WxProg
                   , WxProof
                   , WxRender
                   , WxRenderOld
                   , WxState
                   , WxStyle
                   , WxSynchro
                   , WxTheory
                   , WxTypes
    build-depends:   base >= 4.2 && < 5
                   , cabal-macosx 
                   , containers
                   , deepseq
                   , directory
                   , filepath
                   , hashable
                   , parsec
                   , QuickCheck
                   , time
                   , wxcore
                   , wx
    extensions:      FlexibleContexts
                   , FlexibleInstances
                   , StandaloneDeriving
                   , UndecidableInstances

Executable UTP2
    hs-source-dirs:  app
    main-is:         Main.lhs
    if os(darwin)
        build-depends: base, cabal-macosx, UTP2, wx
    else
        build-depends: base,               UTP2, wx
