Name:                UTP2
Version:             0.9.8.8
Synopsis:            Unifying Theories of Programming Theorem-Prover
Description:
    This application supports the development of UTP theories
    using equational reasoning
    
Homepage:            https://www.scss.tcd.ie/Andrew.Butterfield/Saoithin
License:             GPL-2
License-file:        LICENSE
Author:              Andrew Butterfield
Maintainer:          Andrew Butterfield <Andrew.Butterfield@scss.tcd.ie>
Category:            GUI
Cabal-version:       >= 1.8

Build-type:          Custom
Extra-source-files:  Makefile

data-dir:            resource
data-files:          UTP2-alert.wav
                     UTP2-cheer.wav
                     UTP2-note.wav
                     UTP2-scream.wav
                     static/css/materialize.css

Library
    hs-source-dirs:  src
    exposed-modules: UTP2
                   , UTP2.GUI
                   , UTP2.GUI.Threepenny
    other-modules:   About
                   , AlphaSubs
                   , Archive
                   , Builtin
                   , DSL
                   , DataText
                   , Datatypes
                   , DocTextParser
                   , Files
                   , Flatten
                   , Focus
                   , FreeBound
                   , Graphics.UI.Abstract
                   , Graphics.UI.Abstract.Threepenny
                   , GS3001
                   , GSLogic
                   , Heuristics
                   , ImportExport
                   , Instantiate
                   , Invariants
                   , LaTeXNames
                   , LaTeXPretty
                   , LaTeXSetup
                   , LaTeXTest
                   , Laws
                   , Logic
                   , Manipulation
                   , MatchTypes
                   , Matching
                   , MatchingType
                   , Normalise
                   , Precedences
                   , Program
                   , Proof
                   , ProofReplay
                   , R
                   , RAlg
                   , RootTheory
                   , SideConditions
                   , Substitution
                   , Synchronise
                   , Tables
                   , Theories
                   , Types
                   , UTP
                   , UTP2.GUI.Threepenny.Home
                   , UTP2.GUI.Threepenny.Types
                   , UTP2.GUI.Threepenny.Util
                   , Utilities
                   , WxFiles
                   , WxProg
                   , WxProof
                   , WxRender
                   , WxRenderOld
                   , WxState
                   , WxStyle
                   , WxSynchro
                   , WxTheory
                   , WxTypes
                   , Paths_UTP2
    build-depends:   base >= 4.2 && < 5
                   , cabal-macosx 
                   , containers
                   , deepseq
                   , directory
                   , filepath
                   , hashable
                   , mtl
                   , parsec
                   , QuickCheck
                   , time
                   , threepenny-gui
                   , transformers
                   , threepenny-gui-contextmenu
                   , wxcore
                   , wx
    extensions:      FlexibleContexts
                   , FlexibleInstances
                   , StandaloneDeriving
                   , UndecidableInstances

Executable UTP2
    hs-source-dirs:  app
    main-is:         Main.lhs
    if os(darwin)
        build-depends: base, cabal-macosx, UTP2, wx
    else
        build-depends: base,               UTP2, wx

Executable UTP2-threepenny
    hs-source-dirs:  app-threepenny
    main-is:         Main.lhs
    build-depends:   base, UTP2

Executable UTP2-abstract
    hs-source-dirs:  app-abstract
    main-is:         Main.lhs
    build-depends:   base, UTP2

